Sistemazione del pom e dei test